--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <hr />
 
-    <p><a href="hobbies.html">My Hobbies</a></p>
-    <p><a href="contact-me.html">Contact Me</a></p>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
   </body>
 </html>
