--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CK Kwok's Personal Site</title>
   </head>
 
-  <body>
+  <body style="background-color: #e3fdfd">
     <table cellspacing="20">
       <tr>
         <td>
