--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <title>CK Kwok's Personal Site</title>
+
+    <!-- 
+    #E3FDFD
+    #CBF1F5 
+    #A6E3E9
+    #71C9CE 
+    -->
+
+    <style>
+      body {
+        background-color: #e3fdfd;
+      }
+
+      hr {
+        background-color: white;
+        border-style: none;
+      }
+    </style>
   </head>
 
-  <body style="background-color: #e3fdfd">
+  <body>
     <table cellspacing="20">
       <tr>
         <td>
