--- a/index.html
+++ b/index.html
@@ -3,24 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>CK Kwok's Personal Site</title>
-
-    <!-- 
-    #E3FDFD
-    #CBF1F5 
-    #A6E3E9
-    #71C9CE 
-    -->
-
-    <style>
-      body {
-        background-color: #e3fdfd;
-      }
-
-      hr {
-        background-color: white;
-        border-style: none;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
