--- a/contact-me.html
+++ b/contact-me.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <p>Contact me:</p>
+    <h3>Contact me:</h3>
     <p>+60169875039</p>
     <p>Email: ckkwok87@gmail.com</p>
     <hr />
